--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -60,8 +60,12 @@ jobs:
         run: npm install
       - name: Change permissions for test files
         run: chmod -R 755 tests/Upload\ Test/Documents/Doe2.htm
-      - name: Perform Mocha Tests
+      - name: Perform Mocha Tests - 1/3
         run: npm test
+      - name: Perform Mocha Tests - 2/3
+        run: npm headerTestOne
+      - name: Perform Mocha Tests - 3/3
+        run: npm headerTestTwo
         env:
           USERNAME: ${{ secrets.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
