--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node-version: [16.x, 18.x, 20.x, 22.x]
+        node-version: [22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -31,8 +31,12 @@ jobs:
       - name: Change permissions for test files
         run: sudo chmod -R 755 tests/Upload\ Test/Documents
       - run: npm run build --if-present
-      - name: Perform Mocha Tests
+      - name: Perform Mocha Tests - 1/3
         run: npm test
+      - name: Perform Mocha Tests - 2/3
+        run: npm headerTestOne
+      - name: Perform Mocha Tests - 3/3
+        run: npm headerTestTwo
         env:
           USERNAME: ${{ secrets.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
@@ -48,7 +52,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16, 18, 20, 22]
+        node-version: [22]
 
     steps:
       - uses: actions/checkout@v3
