--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,8 +33,20 @@ jobs:
       - run: npm run build --if-present
       - name: Perform Mocha Tests - 1/3
         run: npm test
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+          GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
+          URL: ${{ secrets.URL }}
+          PRACTICE: ${{ secrets.PRACTICE }}
       - name: Perform Mocha Tests - 2/3
         run: npm headerTestOne
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+          GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
+          URL: ${{ secrets.URL }}
+          PRACTICE: ${{ secrets.PRACTICE }}
       - name: Perform Mocha Tests - 3/3
         run: npm headerTestTwo
         env:
@@ -66,8 +78,20 @@ jobs:
         run: chmod -R 755 tests/Upload\ Test/Documents/Doe2.htm
       - name: Perform Mocha Tests - 1/3
         run: npm test
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+          GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
+          URL: ${{ secrets.URL }}
+          PRACTICE: ${{ secrets.PRACTICE }}
       - name: Perform Mocha Tests - 2/3
         run: npm headerTestOne
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+          GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
+          URL: ${{ secrets.URL }}
+          PRACTICE: ${{ secrets.PRACTICE }}
       - name: Perform Mocha Tests - 3/3
         run: npm headerTestTwo
         env:
