--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node-version: [22.x]
+        node-version: [16.x, 18.x, 20.x, 22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -64,7 +64,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [22]
+        node-version: [16, 18, 20, 22]
 
     steps:
       - uses: actions/checkout@v3
