--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,11 @@ name: Node.js CI
 
 on:
   push:
-    branches: ["main", "maxklema-patch-1"]
+    branches:
+      - "*"
   pull_request:
-    branches: ["main", "maxklema-patch-1"]
+    branches:
+      - "*"
 
 jobs:
   build:
@@ -29,9 +31,9 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Change permissions for test files
-        run: sudo chmod -R 755 tests/Upload\ Test/Documents
+        run: sudo chmod -R 755 tests/data
       - run: npm run build --if-present
-      - name: Perform Mocha Tests - 1/3
+      - name: Perform Mocha Tests - 1/2
         run: npm test
         env:
           USERNAME: ${{ secrets.USERNAME }}
@@ -39,22 +41,13 @@ jobs:
           GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
           URL: ${{ secrets.URL }}
           PRACTICE: ${{ secrets.PRACTICE }}
-      - name: Perform Mocha Tests - 2/3
-        run: npm run headerTestOne
+      - name: Perform Mocha Tests - 2/2
+        run: npm run migrations
         env:
           USERNAME: ${{ secrets.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
-          GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
           URL: ${{ secrets.URL }}
-          PRACTICE: ${{ secrets.PRACTICE }}
-      - name: Perform Mocha Tests - 3/3
-        run: npm run headerTestTwo
-        env:
-          USERNAME: ${{ secrets.USERNAME }}
-          PASSWORD: ${{ secrets.PASSWORD }}
-          GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
-          URL: ${{ secrets.URL }}
-          PRACTICE: ${{ secrets.PRACTICE }}
+          PRACTICE: ${{ secrets.HANDLE }}
 
   rocky-linux:
     runs-on: ubuntu-latest
@@ -75,8 +68,8 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Change permissions for test files
-        run: chmod -R 755 tests/Upload\ Test/Documents/Doe2.htm
-      - name: Perform Mocha Tests - 1/3
+        run: chmod -R 777 tests/data
+      - name: Perform Mocha Tests - 1/2
         run: npm test
         env:
           USERNAME: ${{ secrets.USERNAME }}
@@ -84,19 +77,10 @@ jobs:
           GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
           URL: ${{ secrets.URL }}
           PRACTICE: ${{ secrets.PRACTICE }}
-      - name: Perform Mocha Tests - 2/3
-        run: npm run headerTestOne
+      - name: Perform Mocha Tests - 2/2
+        run: npm run migrations
         env:
           USERNAME: ${{ secrets.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
-          GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
           URL: ${{ secrets.URL }}
-          PRACTICE: ${{ secrets.PRACTICE }}
-      - name: Perform Mocha Tests - 3/3
-        run: npm run headerTestTwo
-        env:
-          USERNAME: ${{ secrets.USERNAME }}
-          PASSWORD: ${{ secrets.PASSWORD }}
-          GEMINI_KEY: ${{ secrets.ROCKY_GEMINI_KEY }}
-          URL: ${{ secrets.URL }}
-          PRACTICE: ${{ secrets.PRACTICE }}
+          PRACTICE: ${{ secrets.HANDLE }}
