--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,14 +33,14 @@ jobs:
       - name: Change permissions for test files
         run: sudo chmod -R 755 tests/data
       - run: npm run build --if-present
-      - name: Perform Mocha Tests - 1/2
-        run: npm test
-        env:
-          USERNAME: ${{ secrets.USERNAME }}
-          PASSWORD: ${{ secrets.PASSWORD }}
-          GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
-          URL: ${{ secrets.URL }}
-          HANDLE: ${{ secrets.HANDLE }}
+      # - name: Perform Mocha Tests - 1/2
+      #   run: npm test
+      #   env:
+      #     USERNAME: ${{ secrets.USERNAME }}
+      #     PASSWORD: ${{ secrets.PASSWORD }}
+      #     GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
+      #     URL: ${{ secrets.URL }}
+      #     HANDLE: ${{ secrets.HANDLE }}
       - name: Perform Mocha Tests - 2/2
         run: npm run migrations
         env:
@@ -69,14 +69,14 @@ jobs:
         run: npm install
       - name: Change permissions for test files
         run: chmod -R 777 tests/data
-      - name: Perform Mocha Tests - 1/2
-        run: npm test
-        env:
-          USERNAME: ${{ secrets.USERNAME }}
-          PASSWORD: ${{ secrets.PASSWORD }}
-          GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
-          URL: ${{ secrets.URL }}
-          HANDLE: ${{ secrets.HANDLE }}
+      # - name: Perform Mocha Tests - 1/2
+      #   run: npm test
+      #   env:
+      #     USERNAME: ${{ secrets.USERNAME }}
+      #     PASSWORD: ${{ secrets.PASSWORD }}
+      #     GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
+      #     URL: ${{ secrets.URL }}
+      #     HANDLE: ${{ secrets.HANDLE }}
       - name: Perform Mocha Tests - 2/2
         run: npm run migrations
         env:
