--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install Dependencies
         run: npm ci
       - name: Change permissions for test files
-        run: sudo chmod -R 755 tests/data
+        run: sudo chmod -R 755 tests/
       - run: npm run build --if-present
       # - name: Perform Mocha Tests - 1/2
       #   run: npm test
@@ -68,7 +68,7 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Change permissions for test files
-        run: chmod -R 777 tests/data
+        run: chmod -R 777 tests/
       # - name: Perform Mocha Tests - 1/2
       #   run: npm test
       #   env:
